@@ -31,6 +31,7 @@ Minor features
  * The type of the ``search_fields`` attribute on ``Page`` models (and other searchable models) has changed from a tuple to a list (see upgrade consideration below) (Tim Heap)
  * Use `PasswordChangeForm` when user changes their password, requiring the user to enter their current password (Matthijs Melissen)
  * Highlight current day in date picker (Jonas Lergell)
+ * Eliminated the deprecated ``register.assignment_tag`` on Django 1.9 (Josh Schneier)
 
 Bug fixes
 ~~~~~~~~~
